working dependencies for blazeface

--- a/packages/scratch-gui/package.json
+++ b/packages/scratch-gui/package.json
@@ -26,6 +26,9 @@
     "url": "git+ssh://git@github.com/LLK/scratch-gui.git"
   },
   "dependencies": {
+    "@tensorflow-models/blazeface": "0.0.5",
+    "@tensorflow/tfjs-converter": "^1.2.7",
+    "@tensorflow/tfjs-core": "^1.2.7",
     "arraybuffer-loader": "^1.0.6",
     "autoprefixer": "^9.0.1",
     "base64-loader": "1.0.0",
