Add browser entry point for gui

--- a/packages/scratch-gui/package.json
+++ b/packages/scratch-gui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "GraphicaL User Interface for creating and running Scratch 3.0 projects",
   "main": "./dist/scratch-gui.js",
+  "browser": "./src/index.js",
   "scripts": {
     "build": "npm run clean && webpack --colors --bail",
     "clean": "rimraf ./build && mkdirp build && rimraf ./dist && mkdirp dist",
